--- a/src/components/BodySetting/BodySetting.module.css
+++ b/src/components/BodySetting/BodySetting.module.css
@@ -11,6 +11,15 @@
     border-radius: 10px;
 }
 
+.InputError {
+    width: 100px;
+    height: 30px;
+    margin-left: 50px;
+    border-radius: 10px;
+    color: red;
+    background-color: darkred;
+}
+
 .Body {
     text-align: center;
     width: 330px;
